[gd_scene load_steps=25 format=3 uid="uid://b5mqjtrue3qmf"]

[ext_resource type="Script" path="res://unsorted.gd/main.gd" id="1_f137u"]
[ext_resource type="Texture2D" uid="uid://cvp22ibthwvje" path="res://Assets/Sprite-0001.png" id="4_giy0u"]
[ext_resource type="Script" path="res://unsorted.gd/UI.gd" id="4_s1bsp"]
[ext_resource type="Texture2D" uid="uid://bew35vd86nytk" path="res://Assets/Sprite-0003.png" id="5_xu23v"]
[ext_resource type="Texture2D" uid="uid://ur8ivyale4cf" path="res://Assets/Button_textures/F_Button.png" id="6_34f80"]
[ext_resource type="Texture2D" uid="uid://b72xolu65rbbx" path="res://Assets/Transparent_Rocks.png" id="6_meqbv"]
[ext_resource type="Texture2D" uid="uid://cog4cxw7ib7x0" path="res://Assets/Button_textures/P_Button.png" id="7_01m4p"]
[ext_resource type="Texture2D" uid="uid://rtqufa5pn2r4" path="res://Assets/Button_textures/FF_Button.png" id="8_s3b7o"]
[ext_resource type="Theme" uid="uid://dwaociqi4fggd" path="res://Assets/Pixel_Theme.tres" id="11_1jkot"]
[ext_resource type="Script" path="res://unsorted.gd/Menue.gd" id="11_dr7di"]
[ext_resource type="PackedScene" uid="uid://b2sveifvvuhbm" path="res://unsorted.tscn/trail.tscn" id="11_n2ubj"]
[ext_resource type="Texture2D" uid="uid://d3iw674ew76ad" path="res://Assets/colored-transparent_packed.png" id="12_ary5q"]
[ext_resource type="Texture2D" uid="uid://0q47mjq75w7f" path="res://Assets/Dollar Icon.png" id="13_p25gx"]
[ext_resource type="AudioStream" uid="uid://jcm3hknna6df" path="res://Sounds.wav/Pause.wav" id="14_1nhxf"]
[ext_resource type="Texture2D" uid="uid://ca78q08f6ekfr" path="res://Assets/Heart.png" id="14_hpla3"]
[ext_resource type="AudioStream" uid="uid://ch34iunsvgl4s" path="res://Music/tohomoko_grain.mp3" id="14_op65f"]
[ext_resource type="AudioStream" uid="uid://dtse5f38d5rmn" path="res://Sounds.wav/Hurt.wav" id="15_smxhu"]
[ext_resource type="AudioStream" uid="uid://cplfoxemwuqqr" path="res://Sounds.wav/Monster_Scream.wav" id="16_8dkql"]
[ext_resource type="AudioStream" uid="uid://cbpraalv8ptjo" path="res://Sounds.wav/Bump.wav" id="17_t87a7"]
[ext_resource type="AudioStream" uid="uid://bqnw1p5t36x4g" path="res://Sounds.wav/Menu_In.wav" id="18_6yfku"]
[ext_resource type="AudioStream" uid="uid://cv8fna41s1fs7" path="res://Sounds.wav/Click.wav" id="18_yunjg"]
[ext_resource type="AudioStream" uid="uid://0plefw62au2w" path="res://Sounds.wav/Menu_Out.wav" id="19_eoi36"]
[ext_resource type="Script" path="res://unsorted.gd/Camera2D.gd" id="21_6na3e"]
[ext_resource type="Theme" uid="uid://mhdwkcecl1i4" path="res://Assets/Kenny Fantasy UI/Fantasy_theme.tres" id="25_fykvu"]

[node name="Game_Logic+UI" type="Node2D" node_paths=PackedStringArray("next_wave_timer", "HealthBar", "HealthLabel")]
process_mode = 1
script = ExtResource("1_f137u")
next_wave_timer = NodePath("next_wave_check")
HealthBar = NodePath("UI/Control/Health_Icon")
HealthLabel = NodePath("UI/Control/Health_Icon/Health_Number")
metadata/_edit_lock_ = true

[node name="Trail" parent="." instance=ExtResource("11_n2ubj")]
process_mode = 1
points = PackedVector2Array(517, 8)
MAX_LENGHT = 100
metadata/_edit_lock_ = true

[node name="Turrets" type="Node2D" parent="."]
process_mode = 1
metadata/_edit_lock_ = true

[node name="UI" type="CanvasLayer" parent="." node_paths=PackedStringArray("MoneyLable", "Pause", "FF")]
script = ExtResource("4_s1bsp")
MoneyLable = NodePath("Control/Hud_mini/Coin_Icon/Money_Label")
Pause = NodePath("Control/Hud_mini/Pause_Play")
FF = NodePath("Control/Hud_mini/Speed_UP")

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2

[node name="Hud_mini" type="Control" parent="UI/Control"]
anchors_preset = 0
offset_left = 1.0
offset_top = 7.0
offset_right = 1.0
offset_bottom = 7.0

[node name="Rect" type="ColorRect" parent="UI/Control/Hud_mini"]
layout_mode = 0
offset_left = -1.0
offset_top = -7.0
offset_right = 111.0
offset_bottom = 10.0
color = Color(0.0392157, 0, 0.156863, 0.431373)

[node name="Rect4" type="ColorRect" parent="UI/Control/Hud_mini"]
layout_mode = 0
offset_left = -1.0
offset_top = 9.0
offset_right = 31.0
offset_bottom = 25.0
color = Color(0.0392157, 0, 0.156863, 0.431373)

[node name="Rect3" type="ColorRect" parent="UI/Control/Hud_mini"]
layout_mode = 0
offset_left = 503.0
offset_top = -7.0
offset_right = 575.0
offset_bottom = 9.0
color = Color(0.0392157, 0, 0.156863, 0.431373)

[node name="Panel" type="Panel" parent="UI/Control/Hud_mini"]
layout_mode = 0
offset_left = 209.0
offset_top = 235.0
offset_right = 404.0
offset_bottom = 301.0
theme = ExtResource("25_fykvu")

[node name="Tower_1" type="TextureButton" parent="UI/Control/Hud_mini/Panel"]
layout_mode = 0
offset_left = 35.0
offset_top = 17.0
offset_right = 67.0
offset_bottom = 49.0
texture_normal = ExtResource("5_xu23v")
stretch_mode = 0

[node name="Tower_2" type="TextureButton" parent="UI/Control/Hud_mini/Panel"]
layout_mode = 0
offset_left = 83.0
offset_top = 17.0
offset_right = 115.0
offset_bottom = 49.0
texture_normal = ExtResource("4_giy0u")
stretch_mode = 0

[node name="Tower_3" type="TextureButton" parent="UI/Control/Hud_mini/Panel"]
layout_mode = 0
offset_left = 131.0
offset_top = 17.0
offset_right = 163.0
offset_bottom = 49.0
texture_normal = ExtResource("6_meqbv")
stretch_mode = 0

[node name="Pause_Play" type="TextureButton" parent="UI/Control/Hud_mini"]
process_mode = 3
layout_mode = 2
offset_left = 503.0
offset_top = -7.0
offset_right = 519.0
offset_bottom = 9.0
toggle_mode = true
texture_normal = ExtResource("6_34f80")
texture_pressed = ExtResource("7_01m4p")
texture_hover = ExtResource("7_01m4p")
stretch_mode = 0

[node name="Speed_UP" type="TextureButton" parent="UI/Control/Hud_mini"]
layout_mode = 2
offset_left = 527.0
offset_top = -7.0
offset_right = 543.0
offset_bottom = 9.0
texture_normal = ExtResource("8_s3b7o")
texture_pressed = ExtResource("6_34f80")
stretch_mode = 0

[node name="Skull_Icon" type="Sprite2D" parent="UI/Control/Hud_mini"]
position = Vector2(79, 1)
texture = ExtResource("12_ary5q")
region_enabled = true
region_rect = Rect2(608, 176, 16, 16)

[node name="Wellen_Lable" type="Label" parent="UI/Control/Hud_mini/Skull_Icon"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = -3.0
offset_right = 28.0
offset_bottom = 9.0
theme = ExtResource("25_fykvu")
text = "0 0"

[node name="Coin_Icon" type="Sprite2D" parent="UI/Control/Hud_mini"]
position = Vector2(39, 1)
texture = ExtResource("13_p25gx")
region_rect = Rect2(357, 69, 6, 6)

[node name="Money_Label" type="Label" parent="UI/Control/Hud_mini/Coin_Icon"]
offset_left = 8.0
offset_right = 48.0
offset_bottom = 23.0
theme = ExtResource("25_fykvu")
text = "999
"

[node name="Health_Icon" type="TextureProgressBar" parent="UI/Control"]
unique_name_in_owner = true
layout_mode = 2
offset_left = -7.0
offset_top = -7.0
offset_right = 33.0
offset_bottom = 33.0
value = 100.0
fill_mode = 4
nine_patch_stretch = true
texture_under = ExtResource("14_hpla3")
texture_progress = ExtResource("14_hpla3")
tint_under = Color(0.117647, 0.0627451, 0.156863, 1)
tint_progress = Color(0.576471, 0.0509804, 0.227451, 1)

[node name="Health_Number" type="Label" parent="UI/Control/Health_Icon"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 26.0
offset_top = 21.0
offset_right = 38.0
offset_bottom = 33.0
theme = ExtResource("25_fykvu")
text = "10
"

[node name="Menue" type="Control" parent="UI/Control"]
process_mode = 3
visible = false
anchors_preset = 0
offset_left = 515.0
offset_top = 9.0
offset_right = 515.0
offset_bottom = 9.0
script = ExtResource("11_dr7di")

[node name="ColorRect" type="ColorRect" parent="UI/Control/Menue"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -553.0
offset_top = -23.0
offset_right = 73.0
offset_bottom = 320.0
color = Color(0.0313726, 0, 0.188235, 0.231373)

[node name="Menue_Container" type="VBoxContainer" parent="UI/Control/Menue"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -327.0
offset_top = 103.0
offset_right = -83.0
offset_bottom = 169.0

[node name="Exit" type="Button" parent="UI/Control/Menue/Menue_Container"]
layout_mode = 2
theme = ExtResource("11_1jkot")
text = "Quit"

[node name="Hauptmenue" type="Button" parent="UI/Control/Menue/Menue_Container"]
layout_mode = 2
text = "Main Menue"

[node name="Sprite2D" type="Sprite2D" parent="UI/Control"]
position = Vector2(560, 8)
texture = ExtResource("12_ary5q")
region_enabled = true
region_rect = Rect2(656, 256, 16, 16)

[node name="Menue_Button" type="Button" parent="UI/Control/Sprite2D"]
offset_left = -7.0
offset_top = -7.0
offset_right = 7.0
offset_bottom = 7.0
theme = ExtResource("11_1jkot")
flat = true
text_direction = 1
metadata/_edit_lock_ = true

[node name="Audio" type="Node" parent="."]

[node name="Theme_Song" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("14_op65f")
volume_db = -31.09
autoplay = true

[node name="Pause" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("14_1nhxf")
volume_db = -25.341

[node name="Hurt" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("15_smxhu")
volume_db = -18.571

[node name="Cat" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("15_smxhu")
volume_db = -18.571

[node name="Monster_Scream" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("16_8dkql")
volume_db = -41.682

[node name="Bump" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("17_t87a7")
volume_db = -18.571

[node name="Click" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("18_yunjg")
volume_db = -18.571

[node name="Menu_In" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("18_6yfku")
volume_db = -18.571

[node name="Menu_Out" type="AudioStreamPlayer" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("19_eoi36")
volume_db = -18.571

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
anchor_mode = 0
script = ExtResource("21_6na3e")

[node name="next_wave_check" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 212.0
offset_top = 175.0
offset_right = 342.0
offset_bottom = 206.0
theme = ExtResource("25_fykvu")
disabled = true

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = 208.0
offset_top = 10.0
offset_right = 404.0
offset_bottom = 50.0
theme = ExtResource("25_fykvu")

[connection signal="pressed" from="UI/Control/Hud_mini/Panel/Tower_1" to="." method="_on_tower_1_pressed"]
[connection signal="pressed" from="UI/Control/Hud_mini/Panel/Tower_2" to="." method="_on_tower_2_pressed"]
[connection signal="pressed" from="UI/Control/Hud_mini/Panel/Tower_3" to="." method="_on_tower_3_pressed"]
[connection signal="pressed" from="UI/Control/Hud_mini/Pause_Play" to="UI" method="_on_pause_play_pressed"]
[connection signal="pressed" from="UI/Control/Hud_mini/Speed_UP" to="UI" method="_on_speed_up_pressed"]
[connection signal="pressed" from="UI/Control/Menue/Menue_Container/Exit" to="UI/Control/Menue" method="_on_exit_pressed"]
[connection signal="pressed" from="UI/Control/Menue/Menue_Container/Hauptmenue" to="UI/Control/Menue" method="_on_hauptmenue_pressed"]
[connection signal="pressed" from="UI/Control/Sprite2D/Menue_Button" to="UI/Control/Menue" method="_on_menue_button_pressed"]
[connection signal="timeout" from="next_wave_check" to="." method="_on_next_wave_check_timeout"]
